--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Quote Page</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="./css/style.css" rel="stylesheet" type="text/css" />
     
 
 </head>
@@ -15,10 +15,11 @@
 
         <div class="container">
 
-            <div class="">
-
-                <p>Dude, suckin at something is the first step at being sorta good at something.</p>
-                <p>Jacob "Jake" the Dog, Sr.</p>
+            <div class="text-content">
+                <span class="span1">"</span>
+                <p>Sometimes it pays to stay in bed on Monday, rather than spending the rest of the week debugging Monday’s code.</p>
+                <p class="author">Dan Salomon</p>
+                <span class="span2">"</span>
 
             </div>
 
